INREL-7421 fix: update z-index for ads

--- a/sass/components/_media.scss
+++ b/sass/components/_media.scss
@@ -52,6 +52,8 @@
 
 .item-media--nexx-video {
   .nxp_popout {
+    z-index: 9999999;
+
     .nexx__close-icon {
       @include icon();
       @include icon-close();
